# DreamCanvas

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  dreamcanvas.code-workspace
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2850b3b80cf9_create_users_table.py  530109f2fc0c_add_generations_table.py
backend/app/: celery_app.py  config.py  main.py
backend/app/api/v1/: auth.py  chat.py  gallery.py  generation.py  router.py  websocket.py
backend/app/core/: __init__.py  dependencies.py  exceptions.py  middleware.py  security.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py  sync_session.py
backend/app/models/: __init__.py  generation.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  generation.py  user.py
backend/app/services/: __init__.py  claude_service.py  generation_service.py  image_gen_service.py  storage_service.py  user_service.py
backend/app/tasks/: __init__.py  generation_tasks.py
mobile/: .env.example  README.md  app.json  eas.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
mobile/.github/workflows/: test.yml
mobile/app/: _layout.tsx  index.tsx
mobile/app/(auth)/: _layout.tsx  login.tsx  register.tsx
mobile/app/(tabs)/: _layout.tsx  chat.tsx
mobile/app/(tabs)/gallery/: [id].tsx  _layout.tsx  index.tsx
mobile/app/(tabs)/generate/: [id].tsx  _layout.tsx  index.tsx
mobile/app/(tabs)/profile/: _layout.tsx  edit.tsx  index.tsx  notifications.tsx  settings.tsx
mobile/maestro/: auth-flow.yaml  chat-flow.yaml  config.yaml  gallery-flow.yaml  generation-flow.yaml  profile-flow.yaml  register-flow.yaml
mobile/src/__tests__/components/: Alert.test.tsx  Button.test.tsx  ChatInput.test.tsx  EmptyState.test.tsx  FormInput.test.tsx  MessageBubble.test.tsx  QualityToggle.test.tsx  SizeSelector.test.tsx  StyleSelector.test.tsx
mobile/src/__tests__/hooks/: useNetworkStatus.test.ts
mobile/src/__tests__/mocks/: expo-image.js  expo-router.js  handlers.ts  server.ts
mobile/src/__tests__/stores/: authStore.test.ts  chatStore.test.ts  settingsStore.test.ts
mobile/src/__tests__/utils/: test-utils.tsx  validation.test.ts
mobile/src/api/: auth.ts  chat.ts  client.ts  generate.ts  index.ts
mobile/src/components/chat/: ChatInput.tsx  MessageBubble.tsx  PromptBanner.tsx  SuggestedPrompts.tsx  TypingIndicator.tsx  index.ts
mobile/src/components/empty/: EmptyState.tsx  index.ts
mobile/src/components/error/: ErrorBoundary.tsx  ErrorFallback.tsx  index.ts
mobile/src/constants/: api.ts  config.ts  env.ts  theme.ts
mobile/src/hooks/: index.ts  useGenerations.ts  useNetworkStatus.ts
mobile/src/stores/: authStore.ts  chatStore.ts  generationStore.ts  index.ts  settingsStore.ts  toastStore.ts
mobile/src/types/: index.ts
mobile/src/utils/: validation.ts
(+28 files in other folders)
